Bug 1302855 - Fold browsercomps into xul; r=bsmedberg

MozReview-Commit-ID: 8oaVngXFfh3

--HG--
extra : rebase_source : 2f5e770d04bd3f75778f242e3866b141df5bbff4